--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <h1>Git Demo</h1>
       <h2>Git is Watching this file!</h2>
       <h3 id="message">JS Message HERE</h3>
+      <h3> This content was added directly in GitHub </h3>
 
       <script src="js/script.js"></script>
 </body>
